infra/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: talks
spec:
  selector:
    name: talks
  ports:
    - name: http
      port: 80
      targetPort: http
