infra/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: talks-http
  labels:
    app.kubernetes.io/name: talks
    app.kubernetes.io/instance: talks
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`talks.vibioh.fr`)
      kind: Rule
      middlewares:
        - name: redirect
      services:
        - name: talks
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: talks-https
  labels:
    app.kubernetes.io/name: talks
    app.kubernetes.io/instance: talks
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`talks.vibioh.fr`)
      kind: Rule
      middlewares:
        - name: ratelimit
      services:
        - name: talks
          port: 80
  tls:
    certResolver: default
